Refactoring: internal Boolean optimization